package br.com.pet_shop;

import br.com.pet_shop.tela.menu.MenuTela;

public class RunApp {

    public static void main(String[] args) {
        MenuTela.menuPrincipal();
    }
}
